# nOS

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  AGENT_BRIEF.md  CLAUDE.md  README.md  TLDR.md  TODO.md  ansible.cfg  bootstrap.sh  config.example.yml  credentials.example.yml  default.config.yml  default.credentials.yml  inventory  main.yml  requirements.yml  security-update.sh
.github/: FUNDING.yml
apps/: _template.yml  documenso.yml  plane.yml.draft  qdrant.yml  roundcube.yml  twofauth.yml
bootstrap/: 01-xcode-clt.sh  02-homebrew.sh  03-ansible.sh  04-galaxy.sh  05-config.sh
callback_plugins/: glasswing_telemetry.py  wing_telemetry.py
docs/: active-work.md  agent-operable-nos.md  aggregator-parity-report.md  ait-runtime-architecture.md  anatomy-runtime-flow.md  anatomy.md  anssi-mapping.md  bones-and-wings-bulk-plan.md  bones-and-wings-refactor.md  coexistence-playbook.md  coolify-import.md  coolify-rfc-gdpr-metadata.md  cowork-wet-test-prompt.md  domain-flip-operator-guide.md  e2e-tester-identity.md  fleet-architecture.md  framework-overview.md  framework-plan.md  glasswing-integration.md  handoff-next-parallel-session.md  handoff-plugin-loader-freeze.md  index.html  integration-map.md  linux-port.md  migration-authoring.md  multi-agent-batch.md  native-sso-survey.md  nginx-container-migration.md  operator-domain-naming.md  post-blank.md  (+16 more)
files/anatomy/pulse/: README.md  pyproject.toml
files/anatomy/pulse/pulse/: __init__.py  __main__.py  config.py  daemon.py  wing_client.py
files/anatomy/pulse/pulse/runners/: __init__.py  subprocess.py
(+1483 files in other folders)
