[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nos-pulse"
version = "0.1.0"
description = "nOS Pulse — local launchd daemon for scheduled agentic + non-agentic jobs"
authors = [{name = "nOS"}]
license = {text = "AGPL-3.0"}
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
nos-pulse = "pulse.__main__:main"

[tool.setuptools.packages.find]
include = ["pulse*"]
